Fixed modal overflow

--- a/themes/shared/assets/sass/shared/modal.scss
+++ b/themes/shared/assets/sass/shared/modal.scss
@@ -55,7 +55,7 @@ html.modal-open {
     margin: 2em auto;
     background: #FFF;
     z-index: 999;
-    box-sizing: border-box;
+    //box-sizing: border-box;
 
     &.video {
         width: 90%;
